[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acenite-agent"
version = "0.1.0"
description = "Acenite agent: OpenTelemetry bootstrap + heartbeat logic"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lumine-Labs" }]
dependencies = [
      "requests>=2.0",
      "psutil>=5.9.0",
]

[project.optional-dependencies]
monitor = [
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",

  "opentelemetry-instrumentation>=0.46b0",
]

heartbeat = [
      "APScheduler>=3.11.2",
]

# ---- frameworks (server-side) ----
flask = [
  "Flask>=2.3,<4.0",
  "opentelemetry-instrumentation-flask>=0.46b0",
]

fastapi = [
  "fastapi>=0.100",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]

django = [
  "Django>=3.2",
  "opentelemetry-instrumentation-django>=0.46b0",
]

# ---- clients / libraries (outgoing / DB) ----
requests-trace = [
  "opentelemetry-instrumentation-requests>=0.46b0",
]

httpx = [
  "httpx>=0.24",
  "opentelemetry-instrumentation-httpx>=0.46b0",
]

psycopg2 = [
  "psycopg2>=2.9",
  "opentelemetry-instrumentation-psycopg2>=0.46b0",
]

sqlalchemy = [
  "SQLAlchemy>=1.4",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
