[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acenite-agent"
version = "0.2.0"
description = "Acenite agent: OpenTelemetry bootstrap + heartbeat logic"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lumine-Labs" }]
dependencies = [
      "requests>=2.0",
      "opentelemetry-api==1.39.1",
]

[project.optional-dependencies]
monitor = [
  "opentelemetry-api==1.39.1",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-exporter-otlp==1.39.1",
  "opentelemetry-instrumentation==0.60b1",
]

heartbeat = [
      "APScheduler>=3.11.2",
]

availability = [
      "APScheduler>=3.11.2",
]

host-metrics = [
      "APScheduler>=3.11.2",
      "psutil>=5.9.0",
]

# ---- frameworks (server-side) ----
flask = [
  "Flask>=2.3,<4.0",
  "opentelemetry-instrumentation-flask==0.60b1",
]

fastapi = [
  "fastapi>=0.100",
  "opentelemetry-instrumentation-fastapi==0.60b1",
]

django = [
  "Django>=3.2",
  "opentelemetry-instrumentation-django==0.60b1",
]

# ---- clients / libraries (outgoing / DB) ----
requests-trace = [
  "opentelemetry-instrumentation-requests==0.60b1",
]

httpx = [
  "httpx>=0.24",
  "opentelemetry-instrumentation-httpx==0.60b1",
]

psycopg2 = [
  "psycopg2>=2.9",
  "opentelemetry-instrumentation-psycopg2==0.60b1",
]

sqlalchemy = [
  "SQLAlchemy>=1.4",
  "opentelemetry-instrumentation-sqlalchemy==0.60b1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
